--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Vite + React + TS</title>
 </head>
 
-<body class="min-h-screen w-full">
+<body class="min-h-screen w-full bg-pry-02">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
