--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/shape1.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <title>Todo App</title>
 </head>
 
-<body class="min-h-screen w-full bg-pry-02">
+<body class="min-h-screen w-full bg-gradient-to-bl from-pry-02 via-pry-02 to-pry-02">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
